<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <!-- Display for calculations -->
    <TextView
        android:id="@+id/displayTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="end"
        android:hint="@string/display_hint"
        android:maxLines="2"
        android:ellipsize="start"
        android:padding="16dp"
        android:textSize="48sp"
        android:textColor="?attr/colorOnSurface"
        android:background="?attr/colorSurfaceVariant"
        app:layout_constraintBottom_toTopOf="@+id/guideline_horizontal_buttons_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="123456789.0123456789" />

    <!-- Guideline for button layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_buttons_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <!-- Row 1: C, DEL, /, * -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonClear"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/clear_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSeven"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonBackspace"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/backspace_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEight"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDivide"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/divide_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNine"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonMultiply"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/multiply_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSubtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal_buttons_top" />

    <!-- Row 2: 7, 8, 9, - -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSeven"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/seven_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFour"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonClear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEight"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/eight_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonFive"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackspace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNine"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/nine_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonSix"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivide" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSubtract"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/subtract_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiply" />

    <!-- Row 3: 4, 5, 6, + -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFour"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/four_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonOne"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSeven" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFive"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/five_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwo"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/buttonEight" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSix"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/six_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonThree"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintTop_toBottomOf="@+id/buttonNine" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAdd"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/add_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEquals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintTop_toBottomOf="@+id/buttonSubtract" />

    <!-- Row 4: 1, 2, 3, = -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonOne"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/one_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFour" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonTwo"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/two_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonZero"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
        app:layout_constraintTop_toBottomOf="@+id/buttonFive" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonThree"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:text="@string/three_button"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDecimal"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_3"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
        app:layout_constraintTop_toBottomOf="@+id/buttonSix" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonEquals"
        style="@style/Widget.Material3.Button.TonalButton